--- a/public/css/style.css
+++ b/public/css/style.css
@@ -103,8 +103,8 @@ footer{
 footer nav{
     color: #FFFFFF;
     font-size: 10px;
-    padding: 15px 0;
-    position: relative;
+    padding: 0;
+    position: relative;;
 }
 footer nav li{
     vertical-align: middle;
@@ -116,7 +116,8 @@ footer nav li{
 }
 .mapSubBar{
     background: none repeat scroll 0 0 #CACACA;
-    height: 50px;
+    height: 27px;
+    padding: 17px 12px 0;
 }
 
 .barRight{
@@ -361,6 +362,13 @@ input[type="submit"]{
     width: 100%;
     z-index: 10;
 }
+#menuprimary{
+    background: none repeat scroll 0 0 #FFFFFF;
+    position: absolute;
+    width: 100%;
+    z-index: 10;
+    padding: 0 11px;
+}
 .menuTitle ul{
     float:left;
     width: 33%;
@@ -382,8 +390,8 @@ input[type="submit"]{
     float: left;
     margin: 0 15px 20px;
     position: relative;
-    text-align: center;
-    width: 58px;
+    text-align: left;
+    width: 100px;
 }
 .header_menu .selected{
     display: block;
@@ -451,15 +459,15 @@ input[type="submit"]{
     font-size: 20px;
 }
 .bgDescShow{
-   padding:20px 0;
-   height: 20px; 
+   height: 50px; 
    opacity: 1;
 }
 #descMenu{
-    z-index: 20;
-    opacity: 0;
-    position: absolute;
     height: 0;
+    opacity: 0;
+    padding: 0 13px;
+    position: absolute;
+    z-index: 20;
 }
 #descMenu #menu{
     z-index: 20;
@@ -467,19 +475,51 @@ input[type="submit"]{
 }
 #descMenu nav{
     float: left;
-    width: 30%;
+    min-width: 270px;
     position: relative;
+    width: 10%;
 }
 #descInfo{
+    float: left;
+    text-align: left;
+    width: 80%;
+}
+.colsView{
+     -moz-column-count: 2;
+    -moz-column-gap: 20px;
+    -webkit-column-count: 2;
+    -webkit-column-gap: 20px;
+    column-count: 2;
+    column-gap: 20px;
+}
+#descNav{
     float:left;
-    width: 60%;
+    width: 50px;
+}
+#descNav >div{
+    width: 22px;
+    height: 22px;
+    margin: 2px auto;
+    cursor: pointer;
+}
+#descNav >div:hover{
+    opacity: 0.7;
+}
+#descDown{
+    background: url("../images/navBtns.jpg") no-repeat scroll 0 0px transparent !important;
+}
+#descPrev{
+    background: url("../images/navBtns.jpg") no-repeat scroll 0 -30px transparent !important;
+}
+#descNext{
+    background: url("../images/navBtns.jpg") no-repeat scroll 0 -59px transparent !important;
 }
 .navBox{
     background: none repeat scroll 0 0 #FFFFFF;
     bottom: 40px;
     height: 0;
     position: absolute;
-    width: 100%;
+    width: auto;
     z-index: 5;
     opacity: 0;
 }
