--- a/views/gallery/css/horizontal.css
+++ b/views/gallery/css/horizontal.css
@@ -2,16 +2,16 @@
 
 /* Frame */
 .frame {
-	height: 100%;
+	height: 95%;
 	overflow: hidden;
+        position: relative;
 }
 .frame ul {
-	list-style: none;
-	margin: 0;
-	padding: 0;
-	height: 100%;
-	font-size: 50px;
-        width: 10000px !important;
+    font-size: 50px;
+    height: 100%;
+    list-style: none outside none;
+    margin: auto;
+    padding: 0;
 }
 .frame ul li {
 	float: left;
@@ -39,11 +39,11 @@
 	cursor: pointer;
 }
 .scrollbar .handle .mousearea {
-	position: absolute;
-	top: -9px;
-	left: 0;
-	width: 100%;
-	height: 20px;
+    height: 46px;
+    left: 0;
+    position: absolute;
+    top: -20px;
+    width: 100%;
 }
 
 /* Pages */
